# adventofcode2022

./: .gitignore  README.md  generator.py  pyproject.toml  tox.ini
day1/day1_python/: pyproject.toml
day1/day1_python/day1/: main.py
day1/day1_rust/src/: main.rs
day2/day2_python/: pyproject.toml
day2/day2_python/day2/: main.py
day2/day2_rust/src/: main.rs
day3/day3_python/: pyproject.toml
day3/day3_python/src/: main.py
day4/day4_python/src/: main.py
day5/day5_python/src/: main.py
day6/day6_python/: pyproject.toml
day6/day6_python/src/: main.py
