[project]
name = ""
version = ""
description = ""
authors = [
    {name = "AbooMinister25", email = "aboominister@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
